--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.15.0",
-    "typescript": "~5.7.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
     "vite": "^6.1.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.2"
   },
   "eslintConfig": {
     "rules": {
